examples/test/testpolicy2247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2247
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key26: value38
      key14: value41
      key3: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
          key24: value5
      podSelector:
        matchLabels:
          key31: value48
